--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<iframe width="700" height="400" src="http://127.0.0.1:8001/widget" style="border: none" sandbox="allow-scripts allow-same-origin allow-popups" allowfullscreen >
+<iframe width="100%" height="500" src="http://127.0.0.1:8001/widget?limit=100&show_past=false&keywords=demo" style="border: none" sandbox="allow-scripts allow-same-origin allow-popups" allowfullscreen >
 
 </iframe>
 
